--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -8,7 +8,7 @@
 .login_page {
     width: 100%;
     height: 100%;
-    background-image: url('./images/bg.jpg');
+    background-image: url('../../assets/images/bg.jpg');
     background-size: 100% 100%;
 }
 
