--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,3 +1,53 @@
 .header {
     height: 80px;
+    background-color: white;
+}
+
+.header_top {
+    height: 40px;
+    line-height: 40px;
+    text-align: right;
+    border-bottom: 1px solid #1da57a;
+    padding-right: 30px;
+}
+
+.header_top span {
+    margin-right: 10px;
+}
+
+.header_bottom {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.header_bottom_left {
+    position: relative;
+    width: 25%;
+    text-align: center;
+    font-size: 20px;
+}
+
+.header_bottom_left::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    transform: translateX(50%);
+    right: 50%;
+    border-top: 20px solid white;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid transparent;
+}
+
+.header_bottom_right {
+    width: 75%;
+    text-align: right;
+    margin-right: 30px;
+}
+
+.header_bottom_right img {
+    width: 30px;
+    height: 30px;
+    margin: 0 15px;
 }
